completed upto donate type 3 options

--- a/index.html
+++ b/index.html
@@ -54,6 +54,31 @@
 
         </section>
 
+        <section class="donate-type">
+            <h1 class="donate-heading">Our Donate Plan</h1>
+            <p class="donate-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="donate-type-container">
+                <div class="donate-type-1">
+                    <img class="d-type1-img" src="./icons/food.png" alt="">
+                    <h3 class="d-type1-heading">Food for a family</h3>
+                    <p class="d-type1-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+
+                <div class="donate-type-2">
+                    <img class="d-type1-img" src="./icons/shelter.png" alt="">
+                    <h3 class="d-type1-heading">Shelter for a family</h3>
+                    <p class="d-type1-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                
+                <div class="donate-type-3">
+                    <img class="d-type1-img" src="./icons/Frame-1.png" alt="">
+                    <h3 class="d-type1-heading">Education for a child</h3>
+                    <p class="d-type1-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+            </div>
+            
+        </section>
+
 
     </main>
 
